[project]
name = "muckrock-llm-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "foia-suggester",
    "ipython>=9.5.0",
    "llm>=0.27.1",
    "llm-documentcloud>=0.1.1",
    "llm-gemini>=0.25",
    "python-documentcloud>=4.4.1",
    "python-muckrock>=2.2.0",
]

[tool.uv.sources]
foia-suggester = { git = "https://github.com/duckduckgrayduck/foia-suggester.git" }
